fixed PageList overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,27 +9,26 @@
 header {
   top: 0;
   z-index: 1;
+  height: 10vh;
 }
 
 main {
-  -ms-overflow-style: none; /* IE and Edge */
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 90vh;
   scroll-behavior: smooth;
   scrollbar-width: none; /* Firefox */
 }
 
 .page {
-  align-items: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
   position: relative;
   width: 600px;
-  height: 83vh;
+  height: 90vh;
   padding: 10px;
-  padding-bottom: 0;
   @media (max-width: 600px) {
     width: 100%;
   }
