--- a/src/components/GoUpButton/GoUpButton.scss
+++ b/src/components/GoUpButton/GoUpButton.scss
@@ -3,7 +3,7 @@
 .go-up-btn {
   position: absolute;
   right: 50px;
-  bottom: -10px;
+  bottom: 20px;
   @media (max-width: 600px) {
     right: 30px;
   }
