--- a/src/components/PageList/PageList.scss
+++ b/src/components/PageList/PageList.scss
@@ -1,9 +1,15 @@
 @import "../colors.scss";
 
 .list-container {
+  position: relative;
+  overflow-y: hidden;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .list {
@@ -11,7 +17,7 @@
   overflow-x: hidden;
   overflow-y: scroll;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 
 .list-shadow-middle {
